welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: value nbPas
while (!estSurBiscuit) {avance(nbPas)}
                               ^Variables:4: error: not found: value nbPas
recule(nbPas)
       ^