welcome.lessons.welcome.variables.Variables.scala.code
while (!estSurBiscuit) {avance(nbPas)}
prendBiscuit()
recule(nbPas)
poseBiscuit()


